feat: 수동 로또 입력을 받아와 수동 로또들을 생성하는 기능